--- a/MVCAppWithEF/Views/ListProducts/ListProducts.cshtml
+++ b/MVCAppWithEF/Views/ListProducts/ListProducts.cshtml
@@ -4,9 +4,14 @@
 <div class="text-center">
     <h2 class="display-4">Products</h2>
 
+    @if(Model.Count==0)
+    {
+        <h4> None available</h4>
+     }
+
     @foreach (Product p in Model )
     {
-        <div> @p.ProductName @p.UnitPrice</div>
+        <h4> @p.Id @p.ProductName @p.UnitPrice  </h4>
     }
 
 </div>
