--- a/MVCAppWithEF/Views/Shared/_Layout.cshtml
+++ b/MVCAppWithEF/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Supplier" asp-action="Suppliers">Show Suppliers</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ListProducts" asp-action="ListProducts">Show Products and Prices</a>
+                        </li>
                     </ul>
                 </div>
             </div>
